# smaug

./: .oxlintrc.json  .prettierignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: checks.yml  release.yml
backend/: Cargo.toml
backend/migration/src/: lib.rs  m20260123_144752_user.rs  m20260123_145152_node.rs  m20260126_155842_group.rs  m20260126_160754_setup.rs  m20260127_211643_settings.rs  m20260129_154755_user_avatar.rs
backend/src/: config.rs  dummy.rs  gravatar.rs  group.rs  main.rs  permissions.rs  rate_limit.rs  settings.rs  setup.rs  user.rs
backend/src/admin/: mod.rs
backend/src/auth/: config.rs  jwt_auth.rs  jwt_state.rs  logout.rs  mod.rs  oidc.rs  password.rs  sso.rs  test_token.rs
backend/src/db/: group.rs  invalid_jwt.rs  mod.rs  node.rs  settings.rs  setup.rs  user.rs
backend/src/mail/: mod.rs  reset.rs  state.rs  templates.rs  test.rs
backend/src/nodes/: connection.rs  management.rs  mod.rs  state.rs
backend/src/user/: account.rs  info.rs  management.rs  mod.rs
backend/src/wing/: mod.rs
backend/src/wings/: management.rs  mod.rs
backend/src/ws/: mod.rs  state.rs  updater.rs
frontend/: package.json
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: permissions.svelte.ts
frontend/src/routes/: +layout.server.ts  (+3 more)
shared/: Cargo.toml
shared/src/: auth.rs  msg.rs
wing/: Cargo.toml  Dockerfile
wing/src/: auth.rs  config.rs  dummy.rs  main.rs  ws.rs
wings/: Cargo.toml  Dockerfile
wings/src/: auth.rs  config.rs  dummy.rs  main.rs  ws.rs
(+115 files in other folders)
