[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
centaurus = { version = "0.4.11", default-features = false, features = [
  "error",
] }
chrono = "0.4.44"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.10.8"

[lib]
path = "src/lib.rs"
