[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
centaurus = { version = "0.16.0", default-features = false, features = [
  "error",
] }
centaurus-derive = "0.1.0"
chrono = "0.4.44"
hex = "0.4.3"
hmac = "0.13.0"
http = "1.4.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.12.0"

[lib]
path = "src/lib.rs"
